force-app/main/default/objects/Realm__c/fields/Realm_ID__c.field-meta.xml
<CustomField>
    <fullName>Realm_ID__c</fullName>
    <label>Realm ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>