force-app/main/default/objects/Realm__c/fields/Realm_Slug__c.field-meta.xml
<CustomField>
    <fullName>Realm_Slug__c</fullName>
    <label>Realm Slug</label>
    <length>250</length>
    <type>Text</type>
</CustomField>