force-app/main/default/objects/Realm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Realm_ID__c</columns>
    <columns>NAME</columns>
    <columns>Realm_Slug__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>